# bluez-ns-controller

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  bluez_helper.py  cmake_install.cmake  controller  controller.py  libjoycon.py  main.py
libjoycon/: CMakeLists.txt  client.c  console.c  console.cb  console.h  controller.c  controller.h  defs.h  device.h  host.c  input_report.c  input_report.h  joycon.h  links.h  main.c  output_report.c  output_report.h  pro_controller.h  session.c  session.cb  session.h  task.h
